[STYLE] Fixed header on mobile devices

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -66,7 +66,7 @@
     margin-top: -100%;
   }
   to {
-    margin-top: 60px;
+    margin-top: 70px;
   }
 }
 
@@ -115,7 +115,7 @@
     background: white;
     color: black;
     position: relative;
-    top: 60px;
+    top: 85px;
   }
   .active {
     color: white;
